output/compParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g 2015-02-23 17:25:24

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class compParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VAR", "FONCTION", "PROCEDURE", "AFFECTATION", "BLOC", "ITERATION", "CONDITION", "RETOUR", "READ", "WRITE", "APPEL", "CALL", "PARAM", "DEC_VAR", "IDF", "CST_ENT", "CSTE_CHAINE", "WS", "'do'", "'end'", "','", "'integer'", "'boolean'", "'array'", "'['", "']'", "'..'", "'('", "')'", "'adr'", "':'", "'begin'", "'='", "'for'", "'in'", "'if'", "'then'", "'else'", "'fi'", "'+'", "'-'", "'true'", "'false'", "'*'", "'/'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'"
    };
    public static final int AFFECTATION=7;
    public static final int BLOC=8;
    public static final int T__50=50;
    public static final int VAR=4;
    public static final int IDF=18;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int ITERATION=9;
    public static final int READ=12;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int CONDITION=10;
    public static final int T__25=25;
    public static final int CALL=15;
    public static final int FONCTION=5;
    public static final int CSTE_CHAINE=20;
    public static final int WRITE=13;
    public static final int APPEL=14;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int WS=21;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int CST_ENT=19;
    public static final int PROCEDURE=6;
    public static final int DEC_VAR=17;
    public static final int RETOUR=11;
    public static final int PARAM=16;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "prog", "exp2", "bounds", "write", "dec_func", "formal", 
        "affectation", "exp", "instruction", "condition", "plus", "fois", 
        "array", "type", "retour", "dec_var", "atom", "ent_proc", "param", 
        "iteration", "read", "dec_proc", "ent_func", "bloc", "appel", "declaration"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public compParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public compParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public compParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return compParser.tokenNames; }
    public String getGrammarFileName() { return "/home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:1: prog : 'do' ( declaration )* ( instruction )* 'end' -> ^( 'do' ( ( declaration )* )? ( instruction )* 'end' ) ;
    public final compParser.prog_return prog() throws RecognitionException {
        compParser.prog_return retval = new compParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal1=null;
        Token string_literal4=null;
        compParser.declaration_return declaration2 = null;

        compParser.instruction_return instruction3 = null;


        Object string_literal1_tree=null;
        Object string_literal4_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try { dbg.enterRule(getGrammarFileName(), "prog");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 1);

        try {
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:11: ( 'do' ( declaration )* ( instruction )* 'end' -> ^( 'do' ( ( declaration )* )? ( instruction )* 'end' ) )
            dbg.enterAlt(1);

            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:14: 'do' ( declaration )* ( instruction )* 'end'
            {
            dbg.location(22,14);
            string_literal1=(Token)match(input,22,FOLLOW_22_in_prog101);  
            stream_22.add(string_literal1);

            dbg.location(22,20);
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:20: ( declaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=FONCTION && LA1_0<=PROCEDURE)||(LA1_0>=25 && LA1_0<=27)) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:21: declaration
            	    {
            	    dbg.location(22,21);
            	    pushFollow(FOLLOW_declaration_in_prog105);
            	    declaration2=declaration();

            	    state._fsp--;

            	    stream_declaration.add(declaration2.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}

            dbg.location(22,37);
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:37: ( instruction )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=RETOUR && LA2_0<=WRITE)||LA2_0==IDF||LA2_0==35||LA2_0==37||LA2_0==39) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:38: instruction
            	    {
            	    dbg.location(22,38);
            	    pushFollow(FOLLOW_instruction_in_prog112);
            	    instruction3=instruction();

            	    state._fsp--;

            	    stream_instruction.add(instruction3.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(22,54);
            string_literal4=(Token)match(input,23,FOLLOW_23_in_prog118);  
            stream_23.add(string_literal4);



            // AST REWRITE
            // elements: 23, 22, instruction, declaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 22:60: -> ^( 'do' ( ( declaration )* )? ( instruction )* 'end' )
            {
                dbg.location(22,63);
                // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:63: ^( 'do' ( ( declaration )* )? ( instruction )* 'end' )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(22,65);
                root_1 = (Object)adaptor.becomeRoot(stream_22.nextNode(), root_1);

                dbg.location(22,70);
                // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:70: ( ( declaration )* )?
                if ( stream_declaration.hasNext() ) {
                    dbg.location(22,71);
                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:71: ( declaration )*
                    while ( stream_declaration.hasNext() ) {
                        dbg.location(22,72);
                        adaptor.addChild(root_1, stream_declaration.nextTree());

                    }
                    stream_declaration.reset();

                }
                stream_declaration.reset();
                dbg.location(22,88);
                // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:22:88: ( instruction )*
                while ( stream_instruction.hasNext() ) {
                    dbg.location(22,89);
                    adaptor.addChild(root_1, stream_instruction.nextTree());

                }
                stream_instruction.reset();
                dbg.location(22,103);
                adaptor.addChild(root_1, stream_23.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(23, 17);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "prog");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "prog"

    public static class declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaration"
    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:24:1: declaration : ( dec_var | dec_func -> dec_func | dec_proc -> dec_proc );
    public final compParser.declaration_return declaration() throws RecognitionException {
        compParser.declaration_return retval = new compParser.declaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        compParser.dec_var_return dec_var5 = null;

        compParser.dec_func_return dec_func6 = null;

        compParser.dec_proc_return dec_proc7 = null;


        RewriteRuleSubtreeStream stream_dec_func=new RewriteRuleSubtreeStream(adaptor,"rule dec_func");
        RewriteRuleSubtreeStream stream_dec_proc=new RewriteRuleSubtreeStream(adaptor,"rule dec_proc");
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 1);

        try {
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:24:13: ( dec_var | dec_func -> dec_func | dec_proc -> dec_proc )
            int alt3=3;
            try { dbg.enterDecision(3);

            switch ( input.LA(1) ) {
            case 25:
            case 26:
            case 27:
                {
                alt3=1;
                }
                break;
            case FONCTION:
                {
                alt3=2;
                }
                break;
            case PROCEDURE:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:24:16: dec_var
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(24,16);
                    pushFollow(FOLLOW_dec_var_in_declaration165);
                    dec_var5=dec_var();

                    state._fsp--;

                    adaptor.addChild(root_0, dec_var5.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:25:5: dec_func
                    {
                    dbg.location(25,5);
                    pushFollow(FOLLOW_dec_func_in_declaration172);
                    dec_func6=dec_func();

                    state._fsp--;

                    stream_dec_func.add(dec_func6.getTree());


                    // AST REWRITE
                    // elements: dec_func
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 25:14: -> dec_func
                    {
                        dbg.location(25,16);
                        adaptor.addChild(root_0, stream_dec_func.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:26:5: dec_proc
                    {
                    dbg.location(26,5);
                    pushFollow(FOLLOW_dec_proc_in_declaration181);
                    dec_proc7=dec_proc();

                    state._fsp--;

                    stream_dec_proc.add(dec_proc7.getTree());


                    // AST REWRITE
                    // elements: dec_proc
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 26:14: -> dec_proc
                    {
                        dbg.location(26,16);
                        adaptor.addChild(root_0, stream_dec_proc.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(27, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "declaration"

    public static class dec_var_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dec_var"
    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:1: dec_var : type IDF ( ',' IDF )* -> ^( VAR type ( IDF )+ ) ;
    public final compParser.dec_var_return dec_var() throws RecognitionException {
        compParser.dec_var_return retval = new compParser.dec_var_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDF9=null;
        Token char_literal10=null;
        Token IDF11=null;
        compParser.type_return type8 = null;


        Object IDF9_tree=null;
        Object char_literal10_tree=null;
        Object IDF11_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try { dbg.enterRule(getGrammarFileName(), "dec_var");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 1);

        try {
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:13: ( type IDF ( ',' IDF )* -> ^( VAR type ( IDF )+ ) )
            dbg.enterAlt(1);

            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:16: type IDF ( ',' IDF )*
            {
            dbg.location(28,16);
            pushFollow(FOLLOW_type_in_dec_var198);
            type8=type();

            state._fsp--;

            stream_type.add(type8.getTree());
            dbg.location(28,24);
            IDF9=(Token)match(input,IDF,FOLLOW_IDF_in_dec_var203);  
            stream_IDF.add(IDF9);

            dbg.location(28,28);
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:28: ( ',' IDF )*
            try { dbg.enterSubRule(4);

            loop4:
            do {
                int alt4=2;
                try { dbg.enterDecision(4);

                int LA4_0 = input.LA(1);

                if ( (LA4_0==24) ) {
                    alt4=1;
                }


                } finally {dbg.exitDecision(4);}

                switch (alt4) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:29: ',' IDF
            	    {
            	    dbg.location(28,29);
            	    char_literal10=(Token)match(input,24,FOLLOW_24_in_dec_var206);  
            	    stream_24.add(char_literal10);

            	    dbg.location(28,35);
            	    IDF11=(Token)match(input,IDF,FOLLOW_IDF_in_dec_var210);  
            	    stream_IDF.add(IDF11);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);
            } finally {dbg.exitSubRule(4);}



            // AST REWRITE
            // elements: type, IDF
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 28:40: -> ^( VAR type ( IDF )+ )
            {
                dbg.location(28,42);
                // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:28:42: ^( VAR type ( IDF )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(28,44);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                dbg.location(28,48);
                adaptor.addChild(root_1, stream_type.nextTree());
                dbg.location(28,53);
                if ( !(stream_IDF.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_IDF.hasNext() ) {
                    dbg.location(28,53);
                    adaptor.addChild(root_1, stream_IDF.nextNode());

                }
                stream_IDF.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(29, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "dec_var");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "dec_var"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:30:1: type : ( 'integer' -> ^( 'integer' ) | 'boolean' -> ^( 'boolean' ) | 'array' -> ^( 'array' ) );
    public final compParser.type_return type() throws RecognitionException {
        compParser.type_return retval = new compParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal12=null;
        Token string_literal13=null;
        Token string_literal14=null;

        Object string_literal12_tree=null;
        Object string_literal13_tree=null;
        Object string_literal14_tree=null;
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");

        try { dbg.enterRule(getGrammarFileName(), "type");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(30, 1);

        try {
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:30:13: ( 'integer' -> ^( 'integer' ) | 'boolean' -> ^( 'boolean' ) | 'array' -> ^( 'array' ) )
            int alt5=3;
            try { dbg.enterDecision(5);

            switch ( input.LA(1) ) {
            case 25:
                {
                alt5=1;
                }
                break;
            case 26:
                {
                alt5=2;
                }
                break;
            case 27:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }

            } finally {dbg.exitDecision(5);}

            switch (alt5) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:30:15: 'integer'
                    {
                    dbg.location(30,15);
                    string_literal12=(Token)match(input,25,FOLLOW_25_in_type237);  
                    stream_25.add(string_literal12);



                    // AST REWRITE
                    // elements: 25
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 30:24: -> ^( 'integer' )
                    {
                        dbg.location(30,26);
                        // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:30:26: ^( 'integer' )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(30,28);
                        root_1 = (Object)adaptor.becomeRoot(stream_25.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:31:27: 'boolean'
                    {
                    dbg.location(31,27);
                    string_literal13=(Token)match(input,26,FOLLOW_26_in_type271);  
                    stream_26.add(string_literal13);



                    // AST REWRITE
                    // elements: 26
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 31:36: -> ^( 'boolean' )
                    {
                        dbg.location(31,38);
                        // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:31:38: ^( 'boolean' )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(31,40);
                        root_1 = (Object)adaptor.becomeRoot(stream_26.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:32:28: 'array'
                    {
                    dbg.location(32,28);
                    string_literal14=(Token)match(input,27,FOLLOW_27_in_type306);  
                    stream_27.add(string_literal14);



                    // AST REWRITE
                    // elements: 27
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 32:36: -> ^( 'array' )
                    {
                        dbg.location(32,38);
                        // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:32:38: ^( 'array' )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(32,40);
                        root_1 = (Object)adaptor.becomeRoot(stream_27.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(32, 48);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "type");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "type"

    public static class dec_func_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "dec_func"
    // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:33:1: dec_func : ent_func ( declaration )* ( instruction )+ 'end' -> ^( FONCTION ) ;
    public final compParser.dec_func_return dec_func() throws RecognitionException {
        compParser.dec_func_return retval = new compParser.dec_func_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal18=null;
        compParser.ent_func_return ent_func15 = null;

        compParser.declaration_return declaration16 = null;

        compParser.instruction_return instruction17 = null;


        Object string_literal18_tree=null;
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        RewriteRuleSubtreeStream stream_ent_func=new RewriteRuleSubtreeStream(adaptor,"rule ent_func");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try { dbg.enterRule(getGrammarFileName(), "dec_func");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(33, 1);

        try {
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:33:13: ( ent_func ( declaration )* ( instruction )+ 'end' -> ^( FONCTION ) )
            dbg.enterAlt(1);

            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:33:16: ent_func ( declaration )* ( instruction )+ 'end'
            {
            dbg.location(33,16);
            pushFollow(FOLLOW_ent_func_in_dec_func322);
            ent_func15=ent_func();

            state._fsp--;

            stream_ent_func.add(ent_func15.getTree());
            dbg.location(33,26);
            // /home/etudiants/karim2u/Bureau/COMPILATION/vincent66u/comp.g:33:26: ( declaration )*
            try { dbg.enterSubRule(6);

            loop6:
            do {
                int alt6=2;
                try { dbg.enterDecision(6);

                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=FONCTION && LA6_0<=PROCEDURE)||(LA6_0>=25 && LA6_0<=27)) ) {
                    alt6=1;
                }


                } finally {dbg.exitDecision(6);}

                switch (alt6) {
            	case 1 :
            	    dbg.enterAlt(1);
